# pdflex

./: .gitignore  README.md  cons.py  fun_test.py  func.py  pdftool.py  pyproject.toml
pdftool/: __main__.py  func.py
src/pdflex/: __init__.py  __main__.py  func.py
tests/: __main__.py  test_pdflex.py
