[project]
name = "pdflex"
version = "0.6.0"
authors = [
  { name = "xab <xab@lan>" }
]
maintainers = [
  {name = "XAB", email = "xab@lan"},
]
description = "PDF工具，可以拆分合并文件、转换文件格式。"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
  "PyMuPDF>=1.25.3,<2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
]

[project.scripts]
pdflex = "pdflex.__main__:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/bkbean/pdflex"
Issues = "https://github.com/bkbean/pdflex/issues"
