[project]
name = "pdflex"
version = "0.6.0"
description = "PDF工具，可以拆分合并文件、转换文件格式。"
readme = "README.md"
authors = [
  { name = "xab <xab@lan>" }
]
maintainers = [
  {name = "XAB", email = "xab@lan"},
]
requires-python = ">=3.12"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
]

license = "MIT"

dependencies = [
  "PyMuPDF>=1.25.3,<2.0",
]

[project.scripts]
pdflex = "pdflex.__main__:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
]

[project.urls]
Homepage = "https://github.com/bkbean/pdflex"
Issues = "https://github.com/bkbean/pdflex/issues"
